2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_boxed.c: make some functions to be static.

	* src/rbgobj_boxed.c: implement GLib::Boxed#{copy,clone}
	Suggested by KATO Kazuyoshi <kadu@zb.wakwak.com>

2003-02-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: follow changes of ../mkmf-gnome2.rb

2003-02-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_boxed.c: Don't free boxed object when it's not copied boxed object.
	* src/rbglib.c: Call setlocale() in Init_glib2(). 

2003-02-12  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: use ../mkmf-gnome2.rb

2003-02-11  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbglib_convert.c: Add a file. Support string character set conversion.
	* src/rbglib.c: Follow above changes.

2003-02-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_object.c, rbgobject.h: Add rbgobj_add_abstract_but_create_instance_class() 
	for the classes which can create instance itself but define as an abstract 
	class in GTK+-2.2. (e.g. GdkGC).

2003-02-03  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbglib.[ch]: change CSTR2RVAL's body to be a new function
	rbg_cstr2rval() to avoid unexprected side-effect of macro.

2003-02-03  Geoff Youngs  <g@intersect-uk.co.uk>

	* src/rbglib.h: a check for NULL strings in the CSTR2RVAL macro so that
	a NULL string translates to nil rather than raising an ArgumentError.

2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/*[ch], README: Update Copyright.

2003-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_boxed.c, rbgobject.h: Add rbgobj_boxed_not_copy_obj().
	Some boxed object shouldn't copy when gpoint convert to VALUE.

2002-12-28  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c (type_is_value_type): fix typo

2002-12-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_value.c rbgobj_gvalue_to_rvalue(), rbgobj_rvalue_to_gvalue():
	Change behavior of G_TYPE_INTERFACE(same as G_TYPE_OBJECT).
