@@ -3,8 +3,8 @@
 
   rbglib.c -
 
-  $Author: mutoh $
-  $Date: 2003/02/12 18:10:25 $
+  $Author: sakai $
+  $Date: 2003/02/14 17:54:40 $
 
   Copyright (C) 2002,2003  Masahiro Sakai
 
@@ -20,6 +20,7 @@ extern void Init_utils_int64();
 extern void Init_glib_convert();
 extern void Init_glib_messages();
 extern void Init_gobject();
+extern void Init_gutil();
 
 char *
 rbg_string_value_ptr(ptr)
@@ -56,19 +57,6 @@ void Init_glib2()
     rb_define_const(mGLib, "MAJOR_VERSION", INT2FIX(GLIB_MAJOR_VERSION));
     rb_define_const(mGLib, "MINOR_VERSION", INT2FIX(GLIB_MINOR_VERSION));
     rb_define_const(mGLib, "MICRO_VERSION", INT2FIX(GLIB_MICRO_VERSION));
-
-    rb_eval_string(
-        "module GLib\n"
-        "  def __add_one_arg_setter(klass)\n"
-        "    ary = klass.instance_methods\n"
-        "    ary.each do |m|\n"
-        "      if /^set_(.*)/ =~ m and not ary.include? \"#{$1}=\" and klass.instance_method(m).arity == 1\n"
-        "        klass.module_eval(\"def #{$1}=(val); set_#{$1}(val); val; end\\n\")\n"
-        "      end\n"
-        "    end\n"
-        "  end\n"
-        "  module_function :__add_one_arg_setter\n"
-        "end\n");
 
     Init_utils_int64();
     Init_glib_convert();
